--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.94.1"
 uvicorn = {extras = ["standard"], version = "^0.21.0"}
 psycopg2 = "^2.9.5"
 sqlalchemy = "^2.0.6"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
