--- a/fast_api_backend/pyproject.toml
+++ b/fast_api_backend/pyproject.toml
@@ -15,6 +15,8 @@ alembic = "^1.10.2"
 psycopg2 = "^2.9.5"
 uvicorn = "^0.21.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+python-multipart = "^0.0.6"
 
 
 [build-system]
