--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = {extras = ["standard"], version = "^0.21.0"}
 psycopg2 = "^2.9.5"
 sqlalchemy = "^2.0.6"
 python-dotenv = "^1.0.0"
+alembic = "^1.10.2"
 
 
 [build-system]
