--- a/fast_api_backend/pyproject.toml
+++ b/fast_api_backend/pyproject.toml
@@ -17,6 +17,8 @@ uvicorn = "^0.21.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.6"
+pytest = "^7.2.2"
+httpx = "^0.23.3"
 
 
 [build-system]
