--- a/fast_api_backend/pyproject.toml
+++ b/fast_api_backend/pyproject.toml
@@ -17,8 +17,12 @@ uvicorn = "^0.21.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.6"
-pytest = "^7.2.2"
 httpx = "^0.23.3"
+pytest = "^7.2.2"
+coverage = "^7.2.2"
+flake8 = "^6.0.0"
+black = "^23.1.0"
+isort = "^5.12.0"
 
 
 [build-system]
