--- a/fast_api_backend/alembic.ini
+++ b/fast_api_backend/alembic.ini
@@ -59,7 +59,9 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:sammy!2023@localhost/alembic_db
+
+sqlalchemy.url = " "
+# sqlalchemy.url = postgresql://postgres:sammy!2023@localhost/alembic_db
 
 
 [post_write_hooks]
