--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ psycopg2 = "^2.9.5"
 sqlalchemy = "^2.0.6"
 python-dotenv = "^1.0.0"
 alembic = "^1.10.2"
+pytest = "^7.2.2"
+httpx = "^0.23.3"
 
 
 [build-system]
